# cyberbully-zh-moderation-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pip-tools  =2.0.0  CLAUDE.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  DoD_VALIDATION_REPORT.md  Dockerfile.api  Dockerfile.bot  GITHUB_ABOUT.md  GPU_SETUP_GUIDE.md  INSTALL.md  Makefile  PROJECT_STATUS.md  QUICK_START.md  README.md  README_EN.md  STRATEGIC_COORDINATION_FINAL_REPORT.md  ci-enhanced.yml  ci-optimized.yml  constraints.txt  docker-compose.yml  dod_validation_results.json  fix_bare_except.py  fix_bare_except.py.bak  fix_bare_except_temp.py  fix_lines.py  fix_newlines.py  fix_unused_vars.py  link.md  mypy.ini  pyproject.toml  remove_unused_imports.py  requirements-dev-fixed.txt  requirements-dev.in  requirements-dev.txt  requirements.in  (+6 more)
.coverage-history/: trend.csv
.github/workflows/: ci.yml  coverage.yml  dependency-validation.yml
api/: API_INTEGRATION_SUMMARY.md  Dockerfile  api_test_results_20250924_152030.json  api_test_results_20250924_154046.json  api_test_results_20250924_154114.json  app.py  app_original.py  debug_simple.py  debug_test.py  docker-compose.yml  model_loader.py  model_loader_simple.py  requirements.txt  simple_model_test.py  simple_test.py  start.bat  start.sh  start_api.py  test_api.py  test_api_8001.py  test_fixed_model_loader.py  validate_model_loader.py
bot/: .env.example  Dockerfile  config.py  docker-compose.yml  line_bot.py  requirements.txt  start.bat  start.sh
config/: active_learning.yaml  evaluation_config.json
configs/: active_learning.yaml  enhanced_model_config.yaml  improved_model.yaml  pytest.ini  semi_supervised.yaml
configs/docker/: .env.example  Dockerfile.api  Dockerfile.bot  Dockerfile.simple  docker-compose.yml  nginx.conf
configs/training/: bullying_f1_optimization.yaml  default.yaml  hyperparameter_search.yaml  multi_task.yaml  rtx3050_optimized.yaml
cyberpuppy/: .gitignore  pyproject.toml
cyberpuppy/src/cyberpuppy/: __init__.py  config.py
cyberpuppy/tests/: __init__.py  conftest.py  test_config.py
data/processed/: AUGMENTATION_SUMMARY.md  augmentation_validation_report.json  cold_analysis.json  cold_augmented.csv  cold_augmented_stats.json  final_augmentation_report.json  id_mapping.csv
data/processed_tc/: id_mapping.csv
data/raw/: dataset_report.json
docs/: ACTIVE_LEARNING_FRAMEWORK.md  ANNOTATION_GUIDE.md  ANNOTATION_SYSTEM_SUMMARY.md  ANNOTATION_WORKFLOW.md  API.md  API_VALIDATION_FIX.md  BULLYING_DETECTION_IMPROVEMENT_GUIDE.md  CODE_REVIEW_REPORT.md  COVERAGE_IMPROVEMENT_REPORT.md  CyberPuppy_API.postman_collection.json  DATASET_DOWNLOAD_GUIDE.md  DATASET_DOWNLOAD_RESEARCH.md  DATA_AUGMENTATION.md  DATA_CONTRACT.md  DATA_USAGE_GUIDE.md  DEPENDENCY_STRATEGY.md  DEPENDENCY_TESTING_REPORT.md  DEPENDENCY_WORKFLOW.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEVELOPMENT_HANDOVER.md  IMPROVED_LABEL_MAPPING_REPORT.md  INTEGRATION_VALIDATION_REPORT.md  LARGE_FILES_SETUP.md  MODEL_VERIFICATION_REPORT.md  PROJECT_DEEP_ANALYSIS.md  README.md  SEMI_SUPERVISED_USAGE.md  SYSTEM_VALIDATION_REPORT.md  TESTING_GUIDE.md  TEST_COVERAGE_IMPROVEMENTS.md  TRAINING_GUIDE.md  TRAINING_MONITOR.md  WINDOWS_COMPATIBILITY_REPORT.md  WINDOWS_VALIDATION_REPORT.md  cleanup_report.md  improved_architecture_design.md  openapi.yaml  performance_estimation_report.md  project_status_report.md
docs/api/: ERROR_CODES.md  MODEL_LOADER_GUIDE.md
docs/datasets/: FINAL_DATASET_REPORT.md
docs/deployment/: DOCKER_DEPLOYMENT.md  DOCKER_TEST_REPORT.md
docs/examples/: curl_examples.sh  javascript_client.js  python_client.py
docs/setup/: INSTALL.md  LINE_BOT_SETUP_GUIDE_2025.md  QUICK_START.md  (+1 more)
examples/: data_augmentation_examples.py  detector_demo.py  integration_example.py  minimal_inference.py  quick_inference.py  training_monitor_demo.py  training_with_checkpoints.py  working_inference_example.py
models/: TRAINING_EXECUTION_SUMMARY.md  comprehensive_evaluation_report.json  evaluation_report.json  performance_verification_results.json
notebooks/: eval_report.ipynb  explain_ig.ipynb  explain_shap.ipynb  train_on_colab.ipynb  train_on_colab_a100.ipynb
reports/: shap_implementation_report.md
scripts/: README.md  README_AUTOMATION.md  README_TRAINING.md  active_learning_loop.py  active_learning_selector.py  aggressive_download.py  alternative_download.py  analyze_cold_dataset.py  annotation_interface.py  annotation_quality_control.py  annotation_tracker.py  annotation_validator.py  annotation_workflow_demo.py  augment_bullying_data.py  batch_annotation.py  check_datasets.py  check_requirements.py  clean_normalize.py  compare_models.py  complete_dataset_setup.py  create_unified_training_data.py  create_unified_training_data_v2.py  demo_semi_supervised.py  demo_training_data_usage.py  demonstrate_improvements.py  deploy.bat  deploy.sh  docker_deploy.sh  docker_test.bat  dod_validation_runner.py  download_chnsenticorp_simple.py  download_datasets.py  evaluate_bullying_detection.py  evaluate_comprehensive.py  evaluate_trained_model.py  execute_parallel_improvement.py  extract_metrics.py  final_fix.py  fix_all_formatting.py  fix_checkpoint_paths.py  (+49 more)
tests/: DIAGNOSTIC_REPORT.md  TEST_SUMMARY_REPORT.md  __init__.py  conftest.py  model_diagnostics_results.json  test_active_learning.py  test_api_integration.py  test_api_live.py  test_api_models.py  test_augmentation.py  test_baselines.py  test_bullying_detector.py  test_clean.py  test_cli.py  test_config.py  test_contextual.py  test_coverage_core.py  test_data_preparation.py  test_detector.py  test_detector_comprehensive.py  test_detector_simple.py  test_eval_metrics.py  test_eval_metrics_comprehensive.py  test_explain_ig.py  test_explain_shap.py  test_imports.py  test_improved_label_map.py  test_label_map.py  test_local_training.py  test_model_loading.py  test_models_advanced.py  test_perspective.py  test_property_based.py  test_result_classes.py  test_safety_rules.py  test_safety_rules_enhanced.py  test_semi_supervised.py  test_weak_supervision.py  test_windows_encoding.py  test_windows_validation_final.py
(+200 files in other folders)
